--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,11 @@
 {
   "presets": ["react", "es2015", "stage-0"],
-  "plugins": ["syntax-async-functions", "transform-async-to-generator", "transform-decorators-legacy", "es6-promise"]
+  "plugins": [
+    "syntax-async-functions",
+    "transform-async-to-generator",
+    "transform-decorators-legacy",
+    "es6-promise",
+    "add-module-exports"
+  ]
 }
 
