--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "redux": "^3.5.2",
     "redux-actions": "^0.10.0",
     "redux-logger": "^2.6.1",
-    "redux-promise": "^0.5.3"
+    "redux-promise-middleware": "^3.1.0",
+    "redux-thunk": "^2.1.0"
   },
   "devDependencies": {
     "babel": "^6.5.2",
