--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "redux-actions": "^0.10.0",
     "redux-logger": "^2.6.1",
     "redux-promise-middleware": "^3.1.0",
-    "redux-thunk": "^2.1.0"
+    "redux-thunk": "^2.1.0",
+    "type-to-reducer": "^1.0.1"
   },
   "devDependencies": {
     "babel": "^6.5.2",
